--- a/src/styles/SCSS/layout/_features.scss
+++ b/src/styles/SCSS/layout/_features.scss
@@ -2,6 +2,9 @@
 
 .features_component {
     @include align-center(100%, 100vh, column);
+    @media screen and (max-width: 768px) {
+        min-height: 100vh;
+    }
     .features_title {
         text-align: center;
         padding-bottom: 50px;
@@ -10,6 +13,10 @@
     .features_content {
         display: flex;
         gap: 65px;
+
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
         div {
             padding: 1.4rem 2rem;
             border-radius: 1.3rem;
